# Escape-from-Epstein-s-Island

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: AuthClient.hpp  AuthService.hpp  BSPTree.hpp  Bullet.hpp  DungeonGenerator.hpp  Enemy.hpp  Engine.hpp  Entity.hpp  Player.hpp  ResourceManager.hpp  Room.hpp  UIComponents.hpp  UpdateContext.hpp  Wall.hpp  config.hpp
server/: .gitignore  CMakeLists.txt  config.json  log.txt  main.cc
server/controllers/: AuthController.cc  AuthController.h  DatabaseManager.cc  DatabaseManager.h  TOTPGenerator.cc  TOTPGenerator.h
server/plugins/: qrcodegen.cpp  qrcodegen.hpp
server/test/: CMakeLists.txt
src/: AuthService.cpp  BSPTree.cpp  Bullet.cpp  Enemy.cpp  Engine.cpp  Player.cpp  Room.cpp  Wall.cpp  main.cpp
src/UI/: UIComponents.hpp
src/core/: CombatManager.cpp  CombatManager.hpp  Engine.cpp  Engine.hpp  InputManager.cpp  InputManager.hpp  LevelManager.cpp  LevelManager.hpp  PhysicsManager.cpp  PhysicsManager.hpp  PickupManager.cpp  PickupManager.hpp  RenderManager.cpp  RenderManager.hpp  ResourceManager.hpp  RoundManager.cpp  RoundManager.hpp  UpdateContext.hpp  config.hpp
src/game/: AnimatedSprite.hpp  Bullet.cpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  Entity.hpp  Player.cpp  Player.hpp  Weapon.hpp  WeaponPickup.hpp
src/network/: AuthClient.hpp  AuthService.cpp  AuthService.hpp
src/world/: BSPTree.cpp  BSPTree.hpp  Chest.cpp  Chest.hpp  Corridor.cpp  Corridor.hpp  DungeonGenerator.cpp  DungeonGenerator.hpp  Floor.cpp  Floor.hpp  Gate.cpp  Gate.hpp  LevelManager.cpp  LevelManager.hpp  Portal.cpp  Portal.hpp  Prefabs.hpp  Room.cpp  Room.hpp  Wall.cpp  Wall.hpp
tests/: CMakeLists.txt  test_auth.cpp
